--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Rob van Hoose",
-            "email": "RobvH@gmail.com"
+            "email": "robvanhoosecode@gmail.com"
         }
     ],
     "repositories": [
